--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -5,5 +5,10 @@
     "sourceType": "module"
   },
   "extends": ["plugin:@typescript-eslint/recommended"],
-  "env": { "node": true }
+  "env": { "node": true },
+  "rules": {
+    "indent": "off",
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
+  }
 }
