--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.9.1",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
-    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
